--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="msvalidate.01" content="9E5B35D353B5DE5D91BC36A542F7C071" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sportsurge | Stream Live NFL, NBA, NCAAB, NHL.</title>
